--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     
 
     
-
+<meta name="google-site-verification" content="Po0AZvIzI__ZueXyZMmEg4GnOu4FI5mDRZJ-06VxFUs" />
 <meta property="og:site_name" content="PREMANTOTO | Situs Slot Online Terpercaya Dengan Game Terbaik Dan Variatif">
 <meta property="og:url" content="https://1b2a1a-fa.myshopify.com/products/premantoto-situs-slot-online-terpercaya-dengan-game-terbaik-dan-variatif">
 <meta property="og:title" content="PREMANTOTO | Situs Slot Online Terpercaya Dengan Game Terbaik Dan Vari">
